--- a/src/Components/Companies/styles.css
+++ b/src/Components/Companies/styles.css
@@ -1,27 +1,30 @@
 .company-text {
-    font-family: Manrope;
-    font-size: 22px;
-    font-weight: 400;
-    line-height: 30.05px;
-    text-align: center;
-  }
-  
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-   
-    background-color: #F5F6F8;
-    height: 200px;
-  }
-  .images-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap:30px;
-    margin: 20px 0px;
-    text-align: center;
-  }
+  font-family: Manrope;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 30.05px;
+  text-align: center;
+}
 
-  
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #f5f6f8;
+  height: 200px;
+}
+.images-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 30px;
+  margin: 20px 0px;
+  text-align: center;
+ 
+}
+
+.images{
+
+}
