--- a/src/Components/Footer/styles.css
+++ b/src/Components/Footer/styles.css
@@ -17,6 +17,7 @@
     font-weight: 500;
     font-size: 16px;
     letter-spacing: -2%;
+    margin-top: 20px;
 
 }
 
@@ -25,6 +26,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+    margin-top: 10px;
 
 }
 
