--- a/src/Components/Companies/styles.css
+++ b/src/Components/Companies/styles.css
@@ -4,6 +4,7 @@
   font-weight: 400;
   line-height: 30.05px;
   text-align: center;
+  
 }
 
 .container {
@@ -16,12 +17,14 @@
   height: 200px;
 }
 .images-container {
+ 
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 30px;
+  gap:50px;
+  justify-content: space-evenly;
+ 
   margin: 20px 0px;
   text-align: center;
+  margin-top: 50px;
  
 }
 
