--- a/src/Components/Navbar/styles.css
+++ b/src/Components/Navbar/styles.css
@@ -3,15 +3,17 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 80px 0px 80px;
-
+  text-align: center;
   color: #fff;
+  align-content: center;
 }
 
 .navbar h1 {
-  margin: 0;
+
   color: #000000;
   font-weight: 700;
   font-size: 20px;
+
 }
 
 .nav-list {
