--- a/src/Components/TrackPayments/styles.css
+++ b/src/Components/TrackPayments/styles.css
@@ -55,4 +55,47 @@
   
 
  
-  
+  .track-container{
+    display:flex;
+    justify-content: space-between;
+    padding: 90px;
+  }
+
+  .track-content{
+    background-color: #DBF1FA;
+    position: relative;
+    width: 550px;
+    height: 640px;
+  }
+
+  .track-cards{
+    background-color:#FFFFFF ;
+    width: 433px;
+    height: 65px;
+    border-radius: 10px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 14px 10px rgba(0, 0, 0, 0.12), 0px 8px 10px rgba(0, 0, 0, 0.14);
+     display: flex;
+     align-items: center;
+     padding: 20px;
+     margin-bottom: 20px;
+     position: absolute;
+     z-index: 1;
+  }
+
+  .track-cards-text{
+    margin-left: 40px;
+  }
+
+  .track-cards-text h2{
+    color: #3734A9;
+    font-weight: 700;
+    font-size: 15px;
+
+  }
+
+  .track-cards-text p{
+    color: #757095;
+    font-size: 14px;
+    font-weight: 400;
+
+  }
